@@ -1,8 +1,7 @@
 package com.br.marketing.client.zhongan.utils;
 
 import lombok.extern.slf4j.Slf4j;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -263,7 +262,7 @@ public class RSAEncrypt {
      * @throws Exception
      */
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.getDecoder().decode(key);
     }
 
     /**
@@ -274,7 +273,7 @@ public class RSAEncrypt {
      * @throws Exception
      */
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.getEncoder().encodeToString(key);
     }
 
     /**
