@@ -1,7 +1,6 @@
 package com.br.marketing.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
@@ -29,7 +28,7 @@ public class ShuHeAESencUtil {
         Cipher c = Cipher.getInstance(ALGO);
         c.init(Cipher.ENCRYPT_MODE, key);
         byte[] encVal = c.doFinal(data.getBytes());
-        return new BASE64Encoder().encode(encVal);
+        return Base64.getEncoder().encodeToString(encVal);
     }
 
     /**
@@ -42,7 +41,7 @@ public class ShuHeAESencUtil {
         Key key = generateKey();
         Cipher c = Cipher.getInstance(ALGO);
         c.init(Cipher.DECRYPT_MODE, key);
-        byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+        byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
         byte[] decValue = c.doFinal(decordedValue);
         return new String(decValue);
     }
